--- a/requirements.txt
+++ b/requirements.txt
@@ -38,8 +38,9 @@ tensorboard==2.6.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 thop==0.0.31.post2005241907
-# torch==1.9.0+cpu
-# torchvision==0.10.0+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+torch==1.9.0+cpu
+torchvision==0.10.0+cpu
 tqdm==4.62.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
