--- a/requirements.txt
+++ b/requirements.txt
@@ -39,8 +39,8 @@ tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 thop==0.0.31.post2005241907
 -f https://download.pytorch.org/whl/torch_stable.html
-torch==1.9.0+cpu
-torchvision==0.10.0+cpu
+torch==1.9.0
+torchvision==0.10.0
 tqdm==4.62.0
 typing-extensions==3.10.0.0
 urllib3==1.26.6
